# libpyfamicom

./: .gitignore  CMakeLists.txt  README.md
api/: debug.py  disassembler.py  instructions.py  main.debugger.py  main.py  main.pygame.py  pytendo.pyd  requirements.txt
api/dbg/: debugger.py  disassembler.py  instructions.py
api/emu/: emulator.py
src/: example.c
src/api/: api.c  api.h
src/app/: main.c
src/com/: clock.c  clock.h  constants.h  globals.c  globals.h  interrupt.c  interrupt.h  timer.h
src/cpu/: cpu.c  cpu.h  cpu_registers.c  cpu_registers.h  memory.c  memory.h  opcodes.c  opcodes.h  stack.c  stack.h
src/emu/: controller.c  controller.h  emu.c  emu.h
src/ines/: pal.c  pal.h  rom.c  rom.h
src/ppu/: memory.c  memory.h  ppu.c  ppu.h
